--- a/gallery.html
+++ b/gallery.html
@@ -194,7 +194,7 @@
   <div class="col-sm-auto align-self-center">
   <nav id="top-primary-nav" class="menuzord theme-color2" data-effect="fade" data-animation="none" data-align="right">
   <ul id="main-nav" class="menuzord-menu">
-  <li class="active menu-item">
+  <li class="menu-item">
   
   <a href="index.html">HOME</a>
   </li>
